--- a/app/globals.css
+++ b/app/globals.css
@@ -311,3 +311,22 @@ body {
 .h-105 { height: 450px; }
 .h-115 { height: 550px; }
 .h-125 { height: 650px; }
+
+.serviceCard {
+  position: relative;
+  margin-top: 0;
+  color: #fff;
+  background: #171717;
+  border: 1px solid #2b2b2b;
+  border-radius: 8px;
+  transition: all ease-in 0.2s;
+}
+
+.serviceCard:hover {
+  border: 1px solid black;
+  transform: scale(1.01);
+}
+
+.serviceCard:active {
+  transform: scale(0.95) rotateZ(1.7deg);
+}
